--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "lib/powerline"]
 	path = lib/powerline
 	url = git@github.com:jonathanchu/emacs-powerline
+[submodule "lib/emmet-mode"]
+	path = lib/emmet-mode
+	url = git@github.com:smihica/emmet-mode
+[submodule "lib/helm-emmet"]
+	path = lib/helm-emmet
+	url = git@github.com:yasuyk/helm-emmet
